--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,3 +11,11 @@
     </div>
 </body>
 </html>
+
+<!-- nnti di hapus ato ubah cmn mempergmpng dev aja -->
+<h1 align="center">
+    <a href="/dogs">dogs</a> <br>
+    <a href="/dogs/admin">dogs admin</a>
+
+
+</h1>
