--- a/views/adminViews/addDog.ejs
+++ b/views/adminViews/addDog.ejs
@@ -34,9 +34,13 @@
             <option value="Mobility Assistance Dogs">Mobility Assistance Dogs</option>
         </select> <br>
 
-        <label for="biodata">Biodata</label> <br>
-        <textarea name="biodata" cols="60" rows="3"></textarea> <br>
+        <label for="imagePath">Image Path</label> <br>
+        <textarea type="text" name="imagePath" cols="60" rows="1"></textarea> <br>
 
+        <label for="biodata">Biodata</label> <br>
+        <textarea name="biodata" cols="60" rows="3"></textarea> <br> <br>
+        
+        
         <button type="submit">Save</button>
     </form>
 </body>
