--- a/views/adminViews/retiredDogs.ejs
+++ b/views/adminViews/retiredDogs.ejs
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('partials/header', { title: 'Our Wonderfull Service Dogs'}) %>
+<%- include('../partials/header', { title: 'Our Pridefull Retired Dogs'}) %>
 <body>
-    <%- include('partials/navbar') %>
-    <%- include('partials/dogsHeading', { title: 'Our Wonderfull Service Dogs'}) %>
+    <%- include('../partials/navbar') %>
+    <%- include('../partials/dogsHeading', { title: "Our Pridefull Retired Dogs" }) %>
+    <h4 align="center"><a style="text-decoration: none; color:teal;" href="addDog">Add a Service Dog to the Pack</a></h4>
     <table align="center" BORDER="2" FRAME="VSIDES, below" RULES="ALL" style="width: 50%;">
         <thead>
             <tr style="background-color:darkgray;">
@@ -33,17 +34,22 @@
                     <td><%= el.speciality %></td>
                     <td><%= (el.availability == true) ? "Available": "Not Available"; %></td>
                     <td>
-                        <a href="/dogs/details/<%= el.id %>" style="text-decoration: none; color:steelblue;">
-                            See Details
-                        </a>&nbsp;|&nbsp;
-
-                        <a href="/dogs/rent/<%= el.id %>" style="text-decoration: none; color:steelblue;">Rent
-                        </a>
+                        <a href="/dogs/details/<%= el.id %>" style="text-decoration: none; color:steelblue;">See Details</a>&nbsp;|&nbsp;<a href="/dogs/editDog/<%= el.id %>" style="text-decoration: none; color:steelblue;">Edit</a>
+                        &nbsp;|&nbsp;<a href="/dogs/retiredDogAdmin/delete/<%= el.id %>" onclick="return confirm('Are you sure you want to delete this cute doggo?')" style="text-decoration: none; color:steelblue;">Delete</a>
+                      
                     </td>
                 </tr>
         <%  }) %>
         </tbody>
     </table>
 </body>
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
 </html>
+
+
+<!-- nnti di hapus ato ubah cmn mempergmpng dev aja -->
+<h1 align="center">
+    <a href="/dogs/retiredDogAdmin">retired dogs admin</a>
+
+
+</h1>
