--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-12 col-md">
             <i class="bi bi-building"></i>
-            <small class="d-block mb-3 text-muted">by </small>
+            <small class="d-block mb-3 text-muted"> </small>
         </div>
     </div>
 </footer>
