--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,5 +6,6 @@
 
     <ul class="nav nav-pills">
       <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+      <li class="nav-item"><a href="/dogs/admin" class="nav-link">Admin View</a></li>
     </ul>
 </header>
