--- a/views/detailsDog.ejs
+++ b/views/detailsDog.ejs
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('partials/header', { title: 'Our Wonderfull Service Dogs'}) %>
+<%- include('partials/header', { title: 'Detail Look of the Service Dog'}) %>
 <body align="center">
     <%- include('partials/navbar') %>
-    <h1 align="center">Hello My Name is <%= dog.name %>, Nice to Meet You</h1> <br>
+    <h1 align="center" style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Hello My Name is <%= dog.name %>, Nice to Meet You</h1> <br>
 
-<figure class="figure">
+
   <% if(dog.imagePath == null || dog.imagePath == undefined) { %>
-    <img src="https://wcc.yccd.edu/wp-content/uploads/2020/02/Dog.png" alt="">
+    <img src="https://wcc.yccd.edu/wp-content/uploads/2020/02/Dog.png" alt="" style="border-radius: 20px; width: 400px;" >
     <% }
     else { %>
-      <img src="<%= dog.imagePath %>" alt="">       
+      <img src="<%= dog.imagePath %>" style="border-radius: 20px; max-width: 400px;"  alt="">
     <% } %>
-    
-  </figure> <br> <br>
 
+<br> <br>
 
 
 <p class="text-center"><%= dog.biodata %></p> <br>
