udh jd home tp table nya kyk blum link dkk dkt

--- a/views/adminViews/retiredDogs.ejs
+++ b/views/adminViews/retiredDogs.ejs
@@ -5,7 +5,7 @@
     <%- include('../partials/navbar') %>
     <%- include('../partials/dogsHeading', { title: "Our Pridefull Retired Dogs" }) %>
     <h4 align="center"><a style="text-decoration: none; color:teal;" href="addDog">Add a Service Dog to the Pack</a></h4>
-    <table align="center" BORDER="2" FRAME="VSIDES, below" RULES="ALL" style="width: 50%;">
+    <%- include('../partials/theadStyle') %>
         <thead>
             <tr style="background-color:darkgray;">
                 <th>No</th>
