--- a/views/detailsDog.ejs
+++ b/views/detailsDog.ejs
@@ -15,19 +15,17 @@
 
 <br> <br>
 
-
 <p class="text-center"><%= dog.biodata %></p> <br>
 
 <% detail.forEach(el => {
   if(dog.speciality == el.speciality) { %>
     <div style="max-width: 30%; margin: auto;">
-      <p class="text-center"><%= el.detail %> </p> <br>
+      <p class="text-center" style="font-size: x-large;"><%= el.detail %> </p> <br>
     </div>
 <% }
 }) %>
 
-<p class="text-end" > <a href="" style="text-decoration: none; color: sienna; font-size: xx-large;">Rent me please</a> </p>
-
+<a class="btn btn-primary" href="/dogs/rent/<%= dog.id %>" role="button">Rent Me Please</a>
 
 </body>
 <%- include('partials/footer') %>
