--- a/views/adminViews/addDog.ejs
+++ b/views/adminViews/addDog.ejs
@@ -17,8 +17,11 @@
             <div style="text-align: left;padding-top: 20px;">
                 <form action="/dogs/addDog" method="POST" align="center">
                     <h1 align="center">Add a Service Dog</h1> <br>
-                    <label for="name">Name</label> <br>
-                    <input type="text" name="name"> <br>
+
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="basic-addon1">Name</span>
+                        <input name="name" type="text" class="form-control" placeholder="Name" aria-label="Username" aria-describedby="basic-addon1">
+                      </div>
                 
                     <label for="species">Species</label> <br>
                     <input type="text" name="species"> <br>
@@ -45,11 +48,20 @@
                         <option value="Anxiety Alert Dogs">Anxiety Alert Dogs</option>
                         <option value="Mobility Assistance Dogs">Mobility Assistance Dogs</option>
                     </select> <br>
-            
-                    <label for="biodata">Biodata</label> <br>
-                    <textarea name="biodata" cols="60" rows="3"></textarea> <br>
+
+                    <label for="basic-url" class="form-label">Image URL</label>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="basic-addon3">https://image.com/</span>
+                        <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+                    </div>
+                                
+                    <div class="input-group">
+                        <span class="input-group-text">Write some detail about this dog</span>
+                        <textarea class="form-control" aria-label="With textarea" name="biodata"></textarea>
+                      </div>
             
                     <button type="submit">Save</button>
+                    <button type="button" class="btn btn-primary">Save</button>
                 </form>
             </div>
         </div>
