--- a/views/dogs.ejs
+++ b/views/dogs.ejs
@@ -4,7 +4,9 @@
 <body>
     <%- include('partials/navbar') %>
     <%- include('partials/dogsHeading', { title: 'Our Wonderfull Service Dogs'}) %>
-    <table align="center" BORDER="2" FRAME="VSIDES, below" RULES="ALL" style="width: 50%;">
+    
+    
+    <%- include('partials/theadStyle') %>
         <thead>
             <tr style="background-color:darkgray;">
                 <th>No</th>
