--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,5 +3,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <style>        
+    .dog-card{
+        width: 18rem;
+        transition: 1s;
+    }
+
+    .dog-card:hover{
+        width: 20rem;
+    }    
+    </style>
     <title><%= title %></title>
+    <style>
+        .card {display:inline-block;}
+    </style>
 </head>
