--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,7 +5,7 @@
     </a>
 
     <ul class="nav nav-pills">
-      <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+      <li class="nav-item"><a href="/dogs" class="nav-link">See All of Our Wonderfull Service Dogs</a></li>
       <li class="nav-item"><a href="/dogs/admin" class="nav-link">Admin View</a></li>
     </ul>
 </header>
