--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,8 +4,8 @@
       <span class="fs-4">ANGEL'S SERVICE</span>
     </a>
 
-    <ul class="nav nav-pills">
-      <li class="nav-item"><a href="/dogs" class="nav-link">See All of Our Wonderfull Service Dogs</a></li>
+    <ul class="nav nav-pills" style="font-size: larger;">
+      <li class="nav-item"><a href="/dogs" class="nav-link" style="color:brown ;">See All the list of Our Wonderfull Service Dogs</a></li>
       <li class="nav-item"><a href="/dogs/admin" class="nav-link">Admin View</a></li>
     </ul>
 </header>
