--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
             <div style="padding: 10px">
                 <% data.forEach(e=>{ %>
                     <div class="card dog-card">
-                        <% if(e.imagePath == null || e.imagePath == undefined) { %>
+                        <% if(e.imagePath == null || e.imagePath == undefined || e.imagePath == '') { %>
                             <img src="https://wcc.yccd.edu/wp-content/uploads/2020/02/Dog.png" alt="" style=" max-width: 280px;" >
                        <% }
                         else { %>
@@ -29,11 +29,3 @@
     </div>
 </body>
 </html>
-
-<!-- nnti di hapus ato ubah cmn mempergmpng dev aja -->
-<h1 align="center">
-    <a href="/dogs">dogs</a> <br>
-    <a href="/dogs/admin">dogs admin</a>
-
-
-</h1>
